# ezmower_firmware

./: .gitignore  README.md
components/mpu9250/: calibrate.c  mpu9250.c
main/: CMakeLists.txt  encoders.c  encoders.h  esp_packets_types.h  l298n_driver.c  l298n_driver.h  main.c  robot_configuration.h  sonar_sensor.c  sonar_sensor.h  uart_events_example_main.c  uart_packets.c  uart_packets.h
main/tasks/: main.c  task_drive.c  task_drive.h  task_imu.c  task_imu.h  task_sonar.c  task_sonar.h  task_uart.c  task_uart.h
